--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
